# ChangeLog for games-action/btanks
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/btanks/ChangeLog,v 1.7 2007/12/27 01:00:19 tupone Exp $

*btanks-0.7.5800 (27 Dec 2007)

  27 Dec 2007; Tupone Alfredo <tupone@gentoo.org>
  +files/btanks-0.7.5800-scons-blows.patch, +btanks-0.7.5800.ebuild:
  Version bump to 0.7.5800 Bug #203138 by St.MPA3b

  29 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  btanks-0.6.5069.ebuild:
  stable x86, bug 200612

  28 Nov 2007; Samuli Suominen <drac@gentoo.org> btanks-0.6.5069.ebuild:
  amd64 stable wrt #200612

*btanks-0.6.5069 (05 Oct 2007)

  05 Oct 2007; Tupone Alfredo <tupone@gentoo.org>
  +files/btanks-0.6.5069-scons-blows.patch, +btanks-0.6.5069.ebuild:
  Version bump to 0.6.5069

  28 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org>
  btanks-0.5.4740-r1.ebuild:
  fix install name (bug #190544)

*btanks-0.5.4740-r1 (24 Aug 2007)

  24 Aug 2007; Mike Frysinger <vapier@gentoo.org>
  +files/btanks-0.5.4740-scons-blows.patch, +btanks-0.5.4740-r1.ebuild:
  Make sure user build env settings are respected and make sure rpath gets set
  properly in the binary (thus no need for a wrapper script) #190065 by
  Torsten Kaiser.

*btanks-0.5.4740 (20 Aug 2007)

  20 Aug 2007; Tupone Alfredo <tupone@gentoo.org> +metadata.xml,
  +btanks-0.5.4740.ebuild:
  New ebuild requested via bug #172772 by Maks Polunin
