@@ -1,6 +1,10 @@
 # ChangeLog for games-action/btanks
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/btanks/ChangeLog,v 1.7 2007/12/27 01:00:19 tupone Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/btanks/ChangeLog,v 1.8 2008/01/17 06:57:38 tupone Exp $
+
+  17 Jan 2008; Tupone Alfredo <tupone@gentoo.org> btanks-0.5.4740-r1.ebuild,
+  btanks-0.6.5069.ebuild, btanks-0.7.5800.ebuild:
+  Fix pkg-config dep. Bug #206253 by bugs@dev.gentooexperimental.org
 
 *btanks-0.7.5800 (27 Dec 2007)
 
